--- a/templates/file_viewer.html
+++ b/templates/file_viewer.html
@@ -7,7 +7,11 @@
     <title>TRP</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
     <style>
-        
+        .image {
+            max-width: 100vw;
+            max-height: 100vh;
+        }
+
         .pdf-page {
             page-break-before: always;
             margin: 0 0;
@@ -21,7 +25,7 @@
 
 <body>
     {% if not is_pdf %}
-    <img src="{{url}}">
+    <img class="image" src="{{url}}">
     {% else %}
     <div id="pdf-container"></div>
 
