--- a/static/css/humanresource/salaryNew.css
+++ b/static/css/humanresource/salaryNew.css
@@ -402,7 +402,10 @@
 .displayNone {
     display: None;
 }
-.table-list_body-tr:nth-child(even),
-.backgroundWhite {
+.table-list_body-tr:nth-child(even) {
     background-color: white;
+}
+
+.backgroundGray {
+    background-color: #EFEFEF;
 }
