feat: 급여2 임금 = 임금 총합계 - 화면에 있는 값들
급여2  member_list 대신 근무시간 0시간 아닌 datas_member_list로 변경

--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -72,9 +72,9 @@
     <div class="scrolling_table-list_body">
         <table class="table-list">
             <tbody>
-                {% for member in member_list %}
+                {% for member in datas_member_list %}
                 {% with salary=salary_list|index:forloop.counter0 %}
-                <tr class="table-list_body-tr salaryList cursor {% if total_work_hour_minute_list|index:forloop.counter0 == '0' %}displayNone{% endif %}">
+                <tr class="table-list_body-tr salaryList cursor">
                     <td class="checkTd table-list_body-tr_td">
                         <input tabindex="100" type="checkbox" class="amountCheck" name="member_id"
                             value="{{member.id}}">
